# easygdf

./: .gitignore  MANIFEST.in  README.md  environment.yml  generate_test_file.py  pyproject.toml  run_all_tests.py  setup.py  trim_test_files.py
.github/workflows/: formatting.yml  run-tests.yml
easygdf/: __init__.py  asci2gdf.py  easygdf.py  initial_distribution.py  screens_touts.py  utils.py
easygdf/data/: initial_distribution.gdf
easygdf/tests/: __init__.py  test_asci2gdf.py  test_easygdf.py  test_initial_distribution.py  test_screens_touts.py
easygdf/tests/data/: all_dtypes.gdf  both_single_array.gdf  group_begin_and_end.gdf  group_end_root.gdf  invalid_dtype_array.gdf  nested_groups.gdf  normalize_screen_floats.gdf  null_array.gdf  screens_touts.gdf  test.gdf  version_mismatch.gdf  wrong_magic_number.gdf
examples/: initial_distribution.py  minimal.py  screens_touts.py
scripts/: generate_test_file.py  trim_test_files.py
src/easygdf/: __init__.py  constants.py  easygdf.py  exceptions.py  initial_distribution.py  screens_touts.py  utils.py
src/easygdf/tests/: test_initial_distribution.py  test_utils.py
tests/: __init__.py  test_easygdf.py  test_initial_distribution.py  test_screens_touts.py  test_utils.py  utils.py
tests/data/: empty_group.gdf  invalid_dtype_single.gdf  invalid_size_array.gdf  invalid_size_single.gdf  too_much_recursion.gdf  unterminated_group.gdf
